add role enum
